# CSmtp

./: .gitignore  LICENSE.htm  README.md  build.bat  build.sh
csmtp/: CMakeLists.txt  CSmtp.cpp  CSmtp.h  CSmtp.sln  CSmtp.vcxproj  CSmtp.vcxproj.filters  base64.cpp  main.cpp  md5.cpp  md5.h
csmtp-ref/: .gitignore
csmtp/csmtp/: CSmtp.cpp  CSmtp.h
csmtp/sender/: Main.cpp
demo/: CMakeLists.txt  Main.cpp
script/: build_linux.sh  build_msvc.bat  clean.bat  clean.sh  config.sh  extract_open_source.bat  extract_open_source.ps1  pause.sh
